--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,10 @@
 hs_err_pid*
 /.idea/
 /.gradle/
+/*/.gradle/
 /repo/
 /build/
+/*/build/
 /logs/
 
 !/gradle/wrapper/gradle-wrapper.jar
@@ -23,3 +25,5 @@ hs_err_pid*
 .project
 .settings/
 .classpath
+/bin/
+/*/bin/
