--- a/.teamcity/pom.xml
+++ b/.teamcity/pom.xml
@@ -22,7 +22,7 @@
     </repository>
     <repository>
       <id>teamcity-server</id>
-      <url>https://teamcity.MinecraftForge_McModLauncher.net/app/dsl-plugins-repository</url>
+      <url>https://teamcity.minecraftforge.net/app/dsl-plugins-repository</url>
       <snapshots>
         <enabled>true</enabled>
       </snapshots>
