--- a/build.gradle
+++ b/build.gradle
@@ -1,28 +1,15 @@
 plugins {
+    id 'java-library'
+    id 'eclipse'
     id 'com.github.ben-manes.versions' version '0.39.0'
     id 'net.minecraftforge.gradleutils' version '2.+'
     id 'de.jjohannes.extra-java-module-info' version '0.11'
     id 'maven-publish'
 }
 
-allprojects {
-    apply plugin: 'java-library'
-    apply plugin: 'eclipse'
-
-    group = 'cpw.mods'
-    
-    java {
-        toolchain.languageVersion = JavaLanguageVersion.of(16)
-        withSourcesJar()
-    }
-}
-
-repositories {
-    mavenLocal()
-    maven {
-        name = 'forge'
-        url = 'https://maven.minecraftforge.net/'
-    }
+java {
+    toolchain.languageVersion = JavaLanguageVersion.of(16)
+    withSourcesJar()
 }
 
 def isNonStable = { String version ->
@@ -39,11 +26,21 @@ dependencyUpdates {
 
 ext.asmVersion = 9.2
 
+group = 'cpw.mods'
 version = gradleutils.getTagOffsetVersion()
 logger.lifecycle('Version: ' + version)
 
 sourceSets {
     jmh
+    testJars
+}
+
+repositories {
+    mavenLocal()
+    maven {
+        name = 'forge'
+        url = 'https://maven.minecraftforge.net/'
+    }
 }
 
 dependencies {
@@ -59,15 +56,15 @@ dependencies {
     
     annotationProcessor('org.apache.logging.log4j:log4j-core:2.17.1')
     
-    testImplementation project(':testjars')
+    testImplementation(sourceSets.testJars.output)
     testImplementation('org.junit.jupiter:junit-jupiter-api:5.7.+')
     testImplementation('org.junit.jupiter:junit-jupiter-engine:5.7.+')
     testImplementation('org.powermock:powermock-core:2.0.+')
     testImplementation('org.powermock:powermock-reflect:2.0.+')
     testCompileOnly('org.jetbrains:annotations:21.0.1')
     
-    jmhImplementation sourceSets.main.output
-    jmhImplementation project(':testjars')
+    jmhImplementation(sourceSets.main.output)
+    jmhImplementation(sourceSets.testJars.output)
     jmhImplementation('org.openjdk.jmh:jmh-core:1.34')
     jmhImplementation('org.powermock:powermock-core:2.0.9')
     jmhAnnotationProcessor('org.openjdk.jmh:jmh-generator-annprocess:1.34')
@@ -76,6 +73,8 @@ dependencies {
 configurations.jmhImplementation.extendsFrom(configurations.implementation)
 
 extraJavaModuleInfo {
+    failOnMissingModuleInfo = false
+    
     automaticModule('commons-math3-3.2.jar', 'commons.math')
     automaticModule('jmh-core-1.34.jar', 'jmh.core')
     automaticModule('jmh-generator-annprocess-1.34.jar', 'jmh.generator.annprocess')
@@ -85,13 +84,17 @@ extraJavaModuleInfo {
     automaticModule('jopt-simple-5.0.4.jar', 'jopt.simple')
 }
 
+task testsJar(type: Jar) {
+    archiveClassifier = 'testsjar'
+    from sourceSets.testJars.output
+}
+
 test {
-    dependsOn ':testjars:jar'
+    dependsOn 'testsJar'
     
     useJUnitPlatform()
-
-    def testjar = project(':testjars').jar.archiveFile.get().asFile
-    systemProperty 'testJars.location', testjar
+    
+    systemProperty 'testJars.location', testsJar.archiveFile.get().asFile
     
     jvmArgs(
             '--module-path', classpath.asPath,
@@ -110,7 +113,6 @@ task jmh(type: JavaExec, dependsOn: jmhClasses) {
     doFirst {
         results.parentFile.mkdirs()
 
-        println(sourceSets.jmh.runtimeClasspath.asPath)
         jvmArgs(
                 '--module-path', sourceSets.jmh.runtimeClasspath.asPath,
                 '--add-modules', 'ALL-MODULE-PATH',
