--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ repositories {
     }
 }
 
+
 dependencies {
     api("org.ow2.asm:asm:${asmVersion}")
     api("org.ow2.asm:asm-tree:${asmVersion}")
@@ -57,12 +58,13 @@ dependencies {
     annotationProcessor('org.apache.logging.log4j:log4j-core:2.17.1')
     
     testCompileOnly(sourceSets.testJars.output)
+    testCompileOnly('org.jetbrains:annotations:23.0.0')
     testImplementation('org.junit.jupiter:junit-jupiter-api:5.8.+')
     testImplementation('org.junit.jupiter:junit-jupiter-engine:5.8.+')
     testImplementation('org.powermock:powermock-core:2.0.+')
     testImplementation('org.powermock:powermock-reflect:2.0.+')
-    testCompileOnly('org.jetbrains:annotations:23.0.0')
-    
+    testRuntimeOnly('org.apiguardian:apiguardian-api:1.1.2')
+
     jmhImplementation(sourceSets.main.output)
     jmhImplementation(sourceSets.testJars.output)
     jmhImplementation('org.openjdk.jmh:jmh-core:1.35')
