--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     api("org.ow2.asm:asm-tree:${asmVersion}")
     api("org.ow2.asm:asm-commons:${asmVersion}")
     
-    implementation('cpw.mods:securejarhandler:2.0.+')
+    implementation('cpw.mods:securejarhandler:2.1.2')
     implementation('org.apache.logging.log4j:log4j-api:2.17.1')
     implementation('org.apache.logging.log4j:log4j-core:2.17.1')
     implementation('net.sf.jopt-simple:jopt-simple:5.0.4')
@@ -77,7 +77,7 @@ configurations.jmhImplementation.extendsFrom(configurations.implementation)
 extraJavaModuleInfo {
     failOnMissingModuleInfo = false
     
-    automaticModule('jmh-core-1.34.jar', 'jmh.core')
+    automaticModule('jmh-core-1.35.jar', 'jmh.core')
     automaticModule('powermock-core-2.0.9.jar', 'powermock.core')
     automaticModule('powermock-reflect-2.0.9.jar', 'powermock.reflect')
     automaticModule('jopt-simple-5.0.4.jar', 'jopt.simple')
@@ -125,6 +125,7 @@ task jmh(type: JavaExec, dependsOn: jmhClasses) {
             'cpw.mods.modlauncher.benchmarks.TransformBenchmark',
             '-bm', 'avgt',
             '-prof', 'stack',
+            '-prof', 'jfr',
             '-r', '3s',
             '-w', '3s',
             '-wi', '3',
