--- a/build.gradle
+++ b/build.gradle
@@ -137,9 +137,12 @@ tasks.register('jmh', JavaExec) {
     ]
 
     if (project.hasProperty('jmhVendor') && project.hasProperty('jmhVersion')) {
+        final specifiedVendor = project.property('jmhVendor').toString()
+        final actualVendor = specifiedVendor.endsWith('-J9') ? specifiedVendor.substring(0, specifiedVendor.length() - 3) : specifiedVendor
         javaLauncher.set(javaToolchains.launcherFor {
-            it.vendor.set(JvmVendorSpec."${project.property('jmhVendor').toString().toUpperCase(Locale.ROOT)}" as JvmVendorSpec)
+            it.vendor.set(JvmVendorSpec."${actualVendor.toUpperCase(Locale.ROOT)}" as JvmVendorSpec)
             it.languageVersion.set(JavaLanguageVersion.of(project.property('jmhVersion') as int))
+            it.implementation.set(specifiedVendor.endsWith('-J9') ? JvmImplementation.J9 : JvmImplementation.VENDOR_SPECIFIC)
         })
     }
 }
