--- a/.github/workflows/test_jvms.yml
+++ b/.github/workflows/test_jvms.yml
@@ -28,10 +28,11 @@ jobs:
           fetch-depth: 0
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
-        gradle-home-cache-includes: |
-          caches
-          notifications
-          jdks
+        with:
+          gradle-home-cache-includes: |
+            caches
+            notifications
+            jdks
       - name: Make gradlew executable
         run: chmod +x ./gradlew
       - name: Run Jmh with Gradle Wrapper
