--- a/.github/workflows/test_jvms.yml
+++ b/.github/workflows/test_jvms.yml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         jvm_version: [ 17, 18, 19, 20 ]
-        jvm: [ Graal_VM, Adoptium, Azul, IBM, Oracle, Microsoft, Amazon, BellSoft, SAP ]
+        jvm: [ Graal_VM, Adoptium, Azul, IBM, Oracle, Amazon, BellSoft, SAP ]
         exclude:
           - jvm: Graal_VM
             jvm_version: 18 # Graal doesn't have a dedicated J18 version
