--- a/.github/workflows/test_jvms.yml
+++ b/.github/workflows/test_jvms.yml
@@ -15,7 +15,7 @@ jobs:
       matrix:
         jvm_version: [ 17, 18, 19, 20 ]
         #jdk: [ Graal_VM, Adoptium, Azul, IBM, Oracle, Amazon, BellSoft, SAP ]
-        jdk: []
+        jdk: [ Graal_VM ]
         exclude:
           - jdk: Graal_VM
             jvm_version: 18 # Graal doesn't have a dedicated J18 version
