--- a/.github/workflows/test_jvms.yml
+++ b/.github/workflows/test_jvms.yml
@@ -10,13 +10,14 @@ on:
 
 jobs:
   testjdks:
-    name: Test JDK ${{ matrix.jdk }} version ${{ matrix.jvm_version }}
-    runs-on: ubuntu-latest
+    name: Test JDK ${{ matrix.jdk }} version ${{ matrix.jvm_version }} on OS ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         jvm_version: [ 17, 18, 19, 20 ]
         jdk: [ Graal_VM, Adoptium, Azul, IBM, Oracle, Amazon, BellSoft, SAP ]
+        os: [ ubuntu-latest, windows-latest, macos-latesst ]
         exclude:
           - jdk: Graal_VM
             jvm_version: 18 # Graal doesn't have a dedicated J18 version
@@ -38,12 +39,13 @@ jobs:
           generate-job-summary: false
       - name: Make gradlew executable
         run: chmod +x ./gradlew
+        if: ${{ matrix.os != 'windows-latest' }}
       - name: Run Jmh with Gradle Wrapper
         run: ./gradlew :jmh -PjmhVendor=${{ matrix.jdk }} -PjmhVersion=${{ matrix.jvm_version }}
       - uses: actions/upload-artifact@v3
         name: Upload Results
         with:
-          name: jmh_${{ matrix.jdk }}-${{ matrix.jvm_version }}
+          name: jmh_${{ matrix.os }}_${{ matrix.jdk }}-${{ matrix.jvm_version }}
           path: build/reports/jmh/result.json
 
   upload_results:
