--- a/.github/workflows/test_jvms.yml
+++ b/.github/workflows/test_jvms.yml
@@ -17,13 +17,14 @@ jobs:
       matrix:
         jvm_version: [ 17, 18, 19, 20 ]
         jdk: [ Graal_VM, Adoptium, Azul, IBM, Oracle, Amazon, BellSoft, SAP ]
-        os: [ ubuntu-latest, windows-latest, macos-latesst ]
+        os: [ ubuntu-latest, windows-latest, macos-latest ]
         exclude:
           - jdk: Graal_VM
             jvm_version: 18 # Graal doesn't have a dedicated J18 version
         include:
           - jdk: Microsoft
-            jvm_version: 17 # MS OpenJDK only has 11 and 177
+            jvm_version: 17 # MS OpenJDK only has 11 and 17
+            os: [ ubuntu-latest, windows-latest, macos-latest ]
     steps:
       - name: Checkout repository
         uses: actions/checkout@main
