--- a/.github/workflows/test_jvms.yml
+++ b/.github/workflows/test_jvms.yml
@@ -30,6 +30,11 @@ jobs:
         uses: actions/checkout@main
         with:
           fetch-depth: 0
+      - name: Setup Temurin 17 for building
+        uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: 17
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
         with:
