--- a/.github/workflows/test_jvms.yml
+++ b/.github/workflows/test_jvms.yml
@@ -38,10 +38,7 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
         with:
-          gradle-home-cache-includes: |
-            caches
-            notifications
-            jdks
+          cache-disabled: true
           generate-job-summary: false
       - name: Make gradlew executable
         run: chmod +x ./gradlew
