--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,11 @@
 #org.gradle.java.home=/home/cpw/minecraft/runtime/java-runtime-gamma/linux/java-runtime-gamma
 
-asmVersion=9.5
+asm_version=9.5
+sjh_version=2.1.11
+log4j_version=2.20.0
+jopt_version=5.0.4
+jetbrains_ann_version=24.0.1
+junit_version=5.9.3
+powermock_version=2.0.9
+apiguardian_version=1.1.2
+jmh_version=1.37
