--- a/.github/workflows/test_jvms.yml
+++ b/.github/workflows/test_jvms.yml
@@ -16,14 +16,11 @@ jobs:
       max-parallel: 10
       fail-fast: false
       matrix:
-        jvm_version: [ 17, 18, 19, 20 ]
+        jvm_version: [ 21, 22 ]
         jdk: [ Graal_VM, Adoptium, Azul, IBM, Oracle, Amazon, BellSoft, SAP ]
-        exclude:
-          - jdk: Graal_VM
-            jvm_version: 18 # Graal doesn't have a dedicated J18 version
         include:
           - jdk: Microsoft
-            jvm_version: 17 # MS OpenJDK only has 11 and 177
+            jvm_version: 21 # MS OpenJDK only has 21
     steps:
       - name: Checkout repository
         uses: actions/checkout@main
