--- a/.github/workflows/test_jvms.yml
+++ b/.github/workflows/test_jvms.yml
@@ -17,7 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         jvm_version: [ 21, 22 ]
-        jdk: [ Graal_VM, Adoptium, Azul, IBM, Oracle, Amazon, BellSoft, SAP ]
+        jdk: [ Graal_VM, Adoptium, Azul, Oracle, Amazon, BellSoft, SAP ]
         include:
           - jdk: IBM
             jvm_version: 21 # IBM only has 21
